// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contract should render a default Contract 1`] = `
<PeachScrollView
  contentContainerStyle={
    {
      "height": "100%",
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      {
        "height": "100%",
      }
    }
  >
    <MatchCardCounterparty
      isDispute={false}
      user={
        {
          "username": "sellerUsername",
        }
      }
    />
    <TradeSummary
      contract={
        {
          "buyer": {
            "username": "buyerUsername",
          },
          "disputeActive": false,
          "seller": {
            "username": "sellerUsername",
          },
        }
      }
      view="buyer"
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexGrow": 1,
          "justifyContent": "flex-end",
          "marginBottom": 8,
          "width": "100%",
        }
      }
    >
      <ContractCTA
        actionPending={false}
        contract={
          {
            "buyer": {
              "username": "buyerUsername",
            },
            "disputeActive": false,
            "seller": {
              "username": "sellerUsername",
            },
          }
        }
        postConfirmPaymentBuyer={[MockFunction]}
        postConfirmPaymentSeller={[MockFunction]}
        requiredAction="requiredAction"
        view="buyer"
      />
    </View>
  </View>
</PeachScrollView>
`;

exports[`Contract should show the buyers profile overview if the viewer is the seller 1`] = `
<PeachScrollView
  contentContainerStyle={
    {
      "height": "100%",
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      {
        "height": "100%",
      }
    }
  >
    <MatchCardCounterparty
      isDispute={false}
      user={
        {
          "username": "buyerUsername",
        }
      }
    />
    <TradeSummary
      contract={
        {
          "buyer": {
            "username": "buyerUsername",
          },
          "disputeActive": false,
          "seller": {
            "username": "sellerUsername",
          },
        }
      }
      view="seller"
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexGrow": 1,
          "justifyContent": "flex-end",
          "marginBottom": 8,
          "width": "100%",
        }
      }
    >
      <ContractCTA
        actionPending={false}
        contract={
          {
            "buyer": {
              "username": "buyerUsername",
            },
            "disputeActive": false,
            "seller": {
              "username": "sellerUsername",
            },
          }
        }
        postConfirmPaymentBuyer={[MockFunction]}
        postConfirmPaymentSeller={[MockFunction]}
        requiredAction="requiredAction"
        view="seller"
      />
    </View>
  </View>
</PeachScrollView>
`;

exports[`Contract should show the dispute sliders when the contract is in the refundOrReviveRequired state 1`] = `
<PeachScrollView
  contentContainerStyle={
    {
      "height": "100%",
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      {
        "height": "100%",
      }
    }
  >
    <MatchCardCounterparty
      isDispute={false}
      user={
        {
          "username": "sellerUsername",
        }
      }
    />
    <TradeSummary
      contract={
        {
          "buyer": {
            "username": "buyerUsername",
          },
          "disputeActive": false,
          "seller": {
            "username": "sellerUsername",
          },
          "tradeStatus": "refundOrReviveRequired",
        }
      }
      view="buyer"
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexGrow": 1,
          "justifyContent": "flex-end",
          "marginBottom": 8,
          "width": "100%",
        }
      }
    >
      <ContractCTA
        actionPending={false}
        contract={
          {
            "buyer": {
              "username": "buyerUsername",
            },
            "disputeActive": false,
            "seller": {
              "username": "sellerUsername",
            },
            "tradeStatus": "refundOrReviveRequired",
          }
        }
        postConfirmPaymentBuyer={[MockFunction]}
        postConfirmPaymentSeller={[MockFunction]}
        requiredAction="requiredAction"
        view="buyer"
      />
      <ResolveDisputeSliders
        contract={
          {
            "buyer": {
              "username": "buyerUsername",
            },
            "disputeActive": false,
            "seller": {
              "username": "sellerUsername",
            },
            "tradeStatus": "refundOrReviveRequired",
          }
        }
      />
    </View>
  </View>
</PeachScrollView>
`;

exports[`Contract should show the loading screen if isLoading is true 1`] = `<_default />`;

exports[`Contract should show the provide email button when the contract requires an email 1`] = `
<PeachScrollView
  contentContainerStyle={
    {
      "height": "100%",
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      {
        "height": "100%",
      }
    }
  >
    <MatchCardCounterparty
      isDispute={false}
      user={
        {
          "username": "sellerUsername",
        }
      }
    />
    <TradeSummary
      contract={
        {
          "buyer": {
            "username": "buyerUsername",
          },
          "disputeActive": false,
          "isEmailRequired": true,
          "seller": {
            "username": "sellerUsername",
          },
        }
      }
      view="buyer"
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexGrow": 1,
          "justifyContent": "flex-end",
          "marginBottom": 8,
          "width": "100%",
        }
      }
    >
      <ProvideEmailButton
        contract={
          {
            "buyer": {
              "username": "buyerUsername",
            },
            "disputeActive": false,
            "isEmailRequired": true,
            "seller": {
              "username": "sellerUsername",
            },
          }
        }
        style={
          {
            "alignSelf": "center",
            "marginBottom": 16,
          }
        }
        view="buyer"
      />
      <ContractCTA
        actionPending={false}
        contract={
          {
            "buyer": {
              "username": "buyerUsername",
            },
            "disputeActive": false,
            "isEmailRequired": true,
            "seller": {
              "username": "sellerUsername",
            },
          }
        }
        postConfirmPaymentBuyer={[MockFunction]}
        postConfirmPaymentSeller={[MockFunction]}
        requiredAction="requiredAction"
        view="buyer"
      />
    </View>
  </View>
</PeachScrollView>
`;
